frontend new era

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 }
+
+
+/* .image-container {
+  border-radius: 8px;
+}
+
+body {
+  background-color: #020201;
+} */
